# crescendo

./: Cargo.toml  README.md  rustfmt.toml  start-reth.sh
.github/workflows/: rust.yml
configs/: aggressive.toml  default.toml  max.toml
crescendo/: Cargo.toml
crescendo/crescendo/: Cargo.toml
crescendo/src/: config.rs  main.rs  network_stats.rs  network_worker.rs  stats.rs  tx_queue.rs  utils.rs  worker.rs  workers.rs
crescendo/src/tx_gen/: mod.rs  queue.rs  utils.rs  worker.rs
crescendo/src/workers/: network.rs  tx_gen.rs
testserver/: Cargo.toml
testserver/src/: main.rs  main_hyper.rs
utils/: start-reth.sh
