[package]
name = "crescendo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1"
http-body-util = "0.1"
thousands = "0.2.0"
tokio-metrics = "0.4.3"
rlimit = "0.10.2"
num_cpus = "1.17.0"
crossbeam-utils = "0.8.21"
mimalloc = "0.1.47"